[package]
name = "wnrake-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "wnrake"
path = "lib/main.rs"
crate-type = ["lib"]

[[bin]]
name = "wnrake"
path = "src/main.rs"

[dependencies]
async-trait = { version = "0.1.88" }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.41", features = ["clock"] }
clap = { version = "4.5.40", features = ["derive"] }
config = { version = "0.15.11", default-features = false, features = ["toml"] }
ego-tree = { version = "0.10.0" }
env_logger = { version = "0.11.8" }
epub-builder = { version = "0.8" }
form_urlencoded = { version = "1.2.1" }
html5ever = { version = "0.29.0" }
log = { version = "0.4.27" }
reqwest = { version = "0.12.20", features = ["json", "stream"] }
scraper = { version = "0.23.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.45.1", features = ["full"] }
